--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     	<link href="stylesheets/style.css" rel=stylesheet>
     	<link href="stylesheets/circle.css" rel=stylesheet>
     	<link href="stylesheets/buttons.css" rel=stylesheet>
-
+		<link href="stylesheets/responsive.css" rel=stylesheet>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes">
 	</head>
     <body>
